# whisper-cpp

./: CMakeLists.txt  README.md
src/: main.cpp
